--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="ThreeSixty Bootstrap Template">
     <meta name="author" content="Fabian Bentz Webdesign">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,500,400italic,700' rel='stylesheet' type='text/css'>
-    <link href="problema/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
-    <link href="problema/css/main.css" rel="stylesheet">
+    <link href="Problema/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="Problema/font-awesome/css/font-awesome.min.css">
+    <link href="Problema/css/main.css" rel="stylesheet">
   </head>
 
 <body>
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                        <a class="navbar-brand" href="app.html"><img class="kane-img" src="problema/img/logo.png" ></a>
+                        <a class="navbar-brand" href="app.html"><img class="kane-img" src="Problema/img/logo.png" ></a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -134,7 +134,7 @@
                     
                 </div>
                 <div class="col-md-6">
-                    <img src="problema/img/agency-img3.jpg">
+                    <img src="Problema/img/agency-img3.jpg">
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
 
 <!-- BOOTSTRAP JAVASCRIPT -->
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="./js/bootstrap.min.js"></script>
+<script type="text/javascript" src="Problemas/js/bootstrap.min.js"></script>
 
 </body>
 </html>
